// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/menu/demo/horizontal.md correctly 1`] = `
<ul
  class="ant-menu ant-menu-light ant-menu-root ant-menu-horizontal"
  role="menu"
>
  <li
    class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
    role="menuitem"
    style="display:none"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-menu-submenu-title"
    >
      <span>
        ···
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
  </li>
  <li
    class="ant-menu-item ant-menu-item-selected"
    role="menuitem"
  >
    <i
      class="anticon anticon-mail"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="mail"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M885.9 127.9H132.8c-39.8 0-72 32.2-72 72v625.9c0 39.8 32.2 72 72 72h753.1c39.8 0 72-32.2 72-72V199.9c0-39.7-32.3-72-72-72zm-77.2 72L540.6 424l-1.6 1.3-1.4 1.5c-6.8 7.2-16 11.1-25.9 11.2h-.2c-9.8 0-19-3.9-25.8-10.9l-1.4-1.4-273.8-225.8h598.2zm77.2 625.9H132.8V229.2l302.8 249.5c20.4 20.2 47.2 31.3 76 31.3h.5c28.9-.1 55.9-11.4 76.2-31.9L886 229.3v596.5h-.1z"
        />
      </svg>
    </i>
    Navigation One
  </li>
  <li
    class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
    role="menuitem"
    style="display:none"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-menu-submenu-title"
    >
      <span>
        ···
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
  </li>
  <li
    aria-disabled="true"
    class="ant-menu-item ant-menu-item-disabled"
    role="menuitem"
  >
    <i
      class="anticon anticon-appstore"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="appstore"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M398 64H136c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V136c0-39.8-32.2-72-72-72zm490 0H626c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V136c0-39.8-32.2-72-72-72zM398 554H136c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V626c0-39.8-32.2-72-72-72zm490 0H626c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V626c0-39.8-32.2-72-72-72z"
        />
      </svg>
    </i>
    Navigation Two
  </li>
  <li
    class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
    role="menuitem"
    style="display:none"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-menu-submenu-title"
    >
      <span>
        ···
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
  </li>
  <li
    class="ant-menu-submenu ant-menu-submenu-horizontal"
    role="menuitem"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-menu-submenu-title"
    >
      <span
        class="submenu-title-wrapper"
      >
        <i
          class="anticon anticon-setting"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="setting"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M961.8 439.6l-3.8-24-73.3-24.5c-6.4-19.8-14.4-39.2-23.9-57.7l34.6-69.1-14.2-19.8c-28.8-39.3-63.2-73.7-102.3-102.1l-19.7-14.2-69.1 34.6c-18.6-9.5-37.9-17.5-57.7-23.9L608 65.8l-23.8-3.7c-26.5-4.2-49.4-6.2-72.2-6.2-22.2 0-45.2 2-72.3 6.3l-24 3.8-24.4 73.4c-20.2 6.6-39.6 14.6-57.7 23.8l-69-34.7-19.7 14.2c-39.2 28.4-73.6 62.7-102.2 102.1l-14.2 19.8 34.6 69.1c-9.4 18.5-17.4 37.8-23.8 57.6L66 415.6l-3.8 24C58 466.1 56 489.7 56 512c0 22.4 2 46 6.2 72.3l3.8 24 73.3 24.5c6.4 19.8 14.4 39.2 23.9 57.7l-34.4 68.9L143 779c14.8 20.6 30.1 38.7 46.7 55.4 15.5 15.6 33.6 30.9 55.3 46.8l19.7 14.2 69-34.6c18.6 9.5 37.9 17.6 57.7 23.9l24.4 73.4 24 3.8c26.3 4.2 49.9 6.2 72.2 6.2 22.3 0 45.9-2 72.3-6.2l24-3.8 24.4-73.4c19.6-6.4 38.9-14.4 57.6-23.8l69.1 34.6 19.7-14.2c21.5-15.5 39.6-30.8 55.3-46.8 16.3-16.3 31.5-34.5 46.7-55.4l14.2-19.8-34.6-69.1c9.5-18.5 17.5-37.8 23.9-57.7l73.3-24.5 3.8-24c4.2-26.3 6.2-49.9 6.2-72.2.3-22.1-1.7-45.8-6.1-72.2zm-65.5 71.6v.5c0 13.5-.9 27.2-2.6 41.9l-35.4 11.8L827 576l-9.7 31.5c-5.5 18.2-12.8 35.9-21.7 52.7l-15.4 29.1 31.4 62.7c-9.2 11.6-18.3 21.9-27.8 31.4l-.2.2c-9.3 9.4-19.6 18.5-31.2 27.6l-62.5-31.3-29 15.1c-17.1 8.9-35.1 16.3-53.4 22.1l-31.3 9.8-10.2 31-11.8 35.4c-14.6 1.8-28.4 2.6-41.9 2.6-13.4 0-27.2-.9-41.9-2.6l-11.8-35.4-10.3-31.3-31.5-9.7c-18.6-5.7-36.3-13-52.7-21.7L334.9 780l-29.5 14.7-33.3 16.6c-11.6-9.2-21.9-18.3-31.4-27.8-9.7-9.7-18.8-20-27.8-31.4l31.2-62.5-15.2-29c-9.1-17.4-16.5-35.2-21.9-53l-9.7-31.5-66.6-22.1c-1.8-14.6-2.6-28.4-2.6-41.9s.9-27.2 2.6-41.9l66.4-22.1 9.7-31.4c5.6-18.1 13-36 21.9-53.2l15.2-29-14.6-29.3-16.6-33.3c17.5-21.8 37.4-41.7 59.2-59.2l62.6 31.3 29.1-15.3c16.8-8.8 34.7-16.2 53.2-22l31.3-9.8 10.4-31.1 11.8-35.4c15.1-1.7 28.8-2.6 41.8-2.6 13.4 0 27.2.9 41.8 2.6l22.2 66.3 31.3 9.7c18.2 5.7 36.1 13.1 53.2 21.9l29 15.2 62.5-31.3c21.8 17.5 41.8 37.4 59.5 59.3L780.4 334l15 28.9c8.9 17.2 16.4 35.2 22.1 53.5l9.8 31.3 31.1 10.4 35.4 11.8c1.9 15 2.7 28.5 2.5 41.3z"
            />
            <path
              d="M512.2 337.7c-96.1 0-174.3 78.2-174.3 174.3 0 96.1 78.2 174.3 174.3 174.3 96.1 0 174.3-78.2 174.3-174.3 0-96.1-78.2-174.3-174.3-174.3zm72.3 246.6c-19.3 19.3-45 30-72.3 30-27.3 0-53-10.6-72.3-30-19.3-19.3-30-45-30-72.3 0-27.3 10.6-53 30-72.3 19.3-19.3 45-30 72.3-30s53 10.6 72.3 30 30 45 30 72.3-10.7 53-30 72.3z"
            />
          </svg>
        </i>
        Navigation Three - Submenu
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
  </li>
  <li
    class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
    role="menuitem"
    style="display:none"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-menu-submenu-title"
    >
      <span>
        ···
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
  </li>
  <li
    class="ant-menu-item"
    role="menuitem"
  >
    <a
      href="https://ant.design"
      rel="noopener noreferrer"
      target="_blank"
    >
      Navigation Four - Link
    </a>
  </li>
  <li
    class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
    role="menuitem"
    style="visibility:hidden"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-menu-submenu-title"
    >
      <span>
        ···
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
  </li>
</ul>
`;

exports[`renders ./components/menu/demo/inline.md correctly 1`] = `
<ul
  class="ant-menu ant-menu-light ant-menu-root ant-menu-inline"
  role="menu"
  style="width:256px"
>
  <li
    class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open ant-menu-submenu-selected"
    role="menuitem"
  >
    <div
      aria-expanded="true"
      aria-haspopup="true"
      aria-owns="sub1$Menu"
      class="ant-menu-submenu-title"
      style="padding-left:24px"
    >
      <span>
        <i
          class="anticon anticon-mail"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="mail"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M885.9 127.9H132.8c-39.8 0-72 32.2-72 72v625.9c0 39.8 32.2 72 72 72h753.1c39.8 0 72-32.2 72-72V199.9c0-39.7-32.3-72-72-72zm-77.2 72L540.6 424l-1.6 1.3-1.4 1.5c-6.8 7.2-16 11.1-25.9 11.2h-.2c-9.8 0-19-3.9-25.8-10.9l-1.4-1.4-273.8-225.8h598.2zm77.2 625.9H132.8V229.2l302.8 249.5c20.4 20.2 47.2 31.3 76 31.3h.5c28.9-.1 55.9-11.4 76.2-31.9L886 229.3v596.5h-.1z"
            />
          </svg>
        </i>
        <span>
          Navigation One
        </span>
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
    <ul
      class="ant-menu  ant-menu-sub ant-menu-inline"
      id="sub1$Menu"
      role="menu"
    >
      <li
        class=" ant-menu-item-group"
      >
        <div
          class="ant-menu-item-group-title"
          title="Item 1"
        >
          Item 1
        </div>
        <ul
          class="ant-menu-item-group-list"
        >
          <li
            class="ant-menu-item ant-menu-item-selected"
            role="menuitem"
            style="padding-left:48px"
          >
            Option 1
          </li>
          <li
            class="ant-menu-item"
            role="menuitem"
            style="padding-left:48px"
          >
            Option 2
          </li>
        </ul>
      </li>
      <li
        class=" ant-menu-item-group"
      >
        <div
          class="ant-menu-item-group-title"
          title="Item 2"
        >
          Item 2
        </div>
        <ul
          class="ant-menu-item-group-list"
        >
          <li
            class="ant-menu-item"
            role="menuitem"
            style="padding-left:48px"
          >
            Option 3
          </li>
          <li
            class="ant-menu-item"
            role="menuitem"
            style="padding-left:48px"
          >
            Option 4
          </li>
        </ul>
      </li>
    </ul>
  </li>
  <li
    class="ant-menu-submenu ant-menu-submenu-inline"
    role="menuitem"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-menu-submenu-title"
      style="padding-left:24px"
    >
      <span>
        <i
          class="anticon anticon-appstore"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="appstore"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M398 64H136c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V136c0-39.8-32.2-72-72-72zm490 0H626c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V136c0-39.8-32.2-72-72-72zM398 554H136c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V626c0-39.8-32.2-72-72-72zm490 0H626c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V626c0-39.8-32.2-72-72-72z"
            />
          </svg>
        </i>
        <span>
          Navigation Two
        </span>
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
    <div />
  </li>
  <li
    class="ant-menu-submenu ant-menu-submenu-inline"
    role="menuitem"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-menu-submenu-title"
      style="padding-left:24px"
    >
      <span>
        <i
          class="anticon anticon-setting"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="setting"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M961.8 439.6l-3.8-24-73.3-24.5c-6.4-19.8-14.4-39.2-23.9-57.7l34.6-69.1-14.2-19.8c-28.8-39.3-63.2-73.7-102.3-102.1l-19.7-14.2-69.1 34.6c-18.6-9.5-37.9-17.5-57.7-23.9L608 65.8l-23.8-3.7c-26.5-4.2-49.4-6.2-72.2-6.2-22.2 0-45.2 2-72.3 6.3l-24 3.8-24.4 73.4c-20.2 6.6-39.6 14.6-57.7 23.8l-69-34.7-19.7 14.2c-39.2 28.4-73.6 62.7-102.2 102.1l-14.2 19.8 34.6 69.1c-9.4 18.5-17.4 37.8-23.8 57.6L66 415.6l-3.8 24C58 466.1 56 489.7 56 512c0 22.4 2 46 6.2 72.3l3.8 24 73.3 24.5c6.4 19.8 14.4 39.2 23.9 57.7l-34.4 68.9L143 779c14.8 20.6 30.1 38.7 46.7 55.4 15.5 15.6 33.6 30.9 55.3 46.8l19.7 14.2 69-34.6c18.6 9.5 37.9 17.6 57.7 23.9l24.4 73.4 24 3.8c26.3 4.2 49.9 6.2 72.2 6.2 22.3 0 45.9-2 72.3-6.2l24-3.8 24.4-73.4c19.6-6.4 38.9-14.4 57.6-23.8l69.1 34.6 19.7-14.2c21.5-15.5 39.6-30.8 55.3-46.8 16.3-16.3 31.5-34.5 46.7-55.4l14.2-19.8-34.6-69.1c9.5-18.5 17.5-37.8 23.9-57.7l73.3-24.5 3.8-24c4.2-26.3 6.2-49.9 6.2-72.2.3-22.1-1.7-45.8-6.1-72.2zm-65.5 71.6v.5c0 13.5-.9 27.2-2.6 41.9l-35.4 11.8L827 576l-9.7 31.5c-5.5 18.2-12.8 35.9-21.7 52.7l-15.4 29.1 31.4 62.7c-9.2 11.6-18.3 21.9-27.8 31.4l-.2.2c-9.3 9.4-19.6 18.5-31.2 27.6l-62.5-31.3-29 15.1c-17.1 8.9-35.1 16.3-53.4 22.1l-31.3 9.8-10.2 31-11.8 35.4c-14.6 1.8-28.4 2.6-41.9 2.6-13.4 0-27.2-.9-41.9-2.6l-11.8-35.4-10.3-31.3-31.5-9.7c-18.6-5.7-36.3-13-52.7-21.7L334.9 780l-29.5 14.7-33.3 16.6c-11.6-9.2-21.9-18.3-31.4-27.8-9.7-9.7-18.8-20-27.8-31.4l31.2-62.5-15.2-29c-9.1-17.4-16.5-35.2-21.9-53l-9.7-31.5-66.6-22.1c-1.8-14.6-2.6-28.4-2.6-41.9s.9-27.2 2.6-41.9l66.4-22.1 9.7-31.4c5.6-18.1 13-36 21.9-53.2l15.2-29-14.6-29.3-16.6-33.3c17.5-21.8 37.4-41.7 59.2-59.2l62.6 31.3 29.1-15.3c16.8-8.8 34.7-16.2 53.2-22l31.3-9.8 10.4-31.1 11.8-35.4c15.1-1.7 28.8-2.6 41.8-2.6 13.4 0 27.2.9 41.8 2.6l22.2 66.3 31.3 9.7c18.2 5.7 36.1 13.1 53.2 21.9l29 15.2 62.5-31.3c21.8 17.5 41.8 37.4 59.5 59.3L780.4 334l15 28.9c8.9 17.2 16.4 35.2 22.1 53.5l9.8 31.3 31.1 10.4 35.4 11.8c1.9 15 2.7 28.5 2.5 41.3z"
            />
            <path
              d="M512.2 337.7c-96.1 0-174.3 78.2-174.3 174.3 0 96.1 78.2 174.3 174.3 174.3 96.1 0 174.3-78.2 174.3-174.3 0-96.1-78.2-174.3-174.3-174.3zm72.3 246.6c-19.3 19.3-45 30-72.3 30-27.3 0-53-10.6-72.3-30-19.3-19.3-30-45-30-72.3 0-27.3 10.6-53 30-72.3 19.3-19.3 45-30 72.3-30s53 10.6 72.3 30 30 45 30 72.3-10.7 53-30 72.3z"
            />
          </svg>
        </i>
        <span>
          Navigation Three
        </span>
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
    <div />
  </li>
</ul>
`;

exports[`renders ./components/menu/demo/inline-collapsed.md correctly 1`] = `
<div
  style="width:256px"
>
  <button
    class="ant-btn ant-btn-primary"
    style="margin-bottom:16px"
    type="button"
  >
    <i
      class="anticon anticon-menu-fold"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="menu-fold"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M112 224h800c26.5 0 48-21.5 48-48s-21.5-48-48-48H112c-26.5 0-48 21.5-48 48s21.5 48 48 48zm0 336h480c26.5 0 48-21.5 48-48s-21.5-48-48-48H112c-26.5 0-48 21.5-48 48s21.5 48 48 48zm669.3-204.4c-1.5-1.3-3.3-2-5.3-2-4.4 0-8 3.6-8 8v300.3c0 1.9.7 3.8 2 5.3 2.9 3.3 8 3.7 11.3.8l165.1-144c.5-.5 1.1-1 1.5-1.5 5.8-6.7 5.1-16.8-1.5-22.6L781.3 355.6zM912 800H112c-26.5 0-48 21.5-48 48s21.5 48 48 48h800c26.5 0 48-21.5 48-48s-21.5-48-48-48z"
        />
      </svg>
    </i>
  </button>
  <ul
    class="ant-menu ant-menu-dark ant-menu-root ant-menu-inline"
    role="menu"
  >
    <li
      class="ant-menu-item ant-menu-item-selected"
      role="menuitem"
      style="padding-left:24px"
    >
      <i
        class="anticon anticon-pie-chart"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="pie-chart"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M466.502 1024c129.003 0 245.8-52.207 330.292-136.601l-330.292-328.69V93.593C208.905 93.593 0 301.796 0 558.71s208.905 465.29 466.502 465.29zM530.8 491.697h493.2C1024 220.097 803.103 0 530.8 0v491.697zm26.191 65.293l331.6 327.303c83.594-84.003 135.195-199.706 135.195-327.303H556.99z"
          />
        </svg>
      </i>
      <span>
        Option 1
      </span>
    </li>
    <li
      class="ant-menu-item"
      role="menuitem"
      style="padding-left:24px"
    >
      <i
        class="anticon anticon-desktop"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="desktop"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M902 130H123.2C91.7 130 66 155.7 66 187.2V667c0 31.5 25.7 57.2 57.2 57.2H480v107.9H332.7c-17.4 0-31.6 14.2-31.6 31.6 0 17.4 14.2 31.6 31.6 31.6h358.4c17.4 0 31.6-14.2 31.6-31.6 0-17.4-14.2-31.6-31.6-31.6H543.2V724.2H902c31.5 0 57.2-25.7 57.2-57.2V187.2c0-31.5-25.7-57.2-57.2-57.2zm-6 63.2V661H129.2V193.2H896z"
          />
        </svg>
      </i>
      <span>
        Option 2
      </span>
    </li>
    <li
      class="ant-menu-item"
      role="menuitem"
      style="padding-left:24px"
    >
      <i
        class="anticon anticon-inbox"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="inbox"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M885.2 446.3l-.2-.8-112.2-285.1c-5-16.1-19.9-27.2-36.8-27.2H281.2c-17 0-32.1 11.3-36.9 27.6L139.4 443l-.3.7-.2.8c-1.3 4.9-1.7 9.9-1 14.8-.1 1.6-.2 3.2-.2 4.8V830c0 33.5 27.3 60.8 60.8 60.8h627.2c33.5 0 60.8-27.3 60.9-60.8V464.1c0-1.3 0-2.6-.1-3.7.4-4.9 0-9.6-1.3-14.1zm-295.8-43l-.3 15.7c-.8 44.9-31.8 75.1-77.1 75.1-22.1 0-41.1-7.1-54.8-20.6S436 441.2 435.6 419l-.3-15.7H229.5L309 210h399.2l81.7 193.3H589.4zm-375 76.8h157.3c24.3 57.1 76 90.8 140.4 90.8 33.7 0 65-9.4 90.3-27.2 22.2-15.6 39.5-37.4 50.7-63.6h156.5V814H214.4V480.1z"
          />
        </svg>
      </i>
      <span>
        Option 3
      </span>
    </li>
    <li
      class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open"
      role="menuitem"
    >
      <div
        aria-expanded="true"
        aria-haspopup="true"
        aria-owns="sub1$Menu"
        class="ant-menu-submenu-title"
        style="padding-left:24px"
      >
        <span>
          <i
            class="anticon anticon-mail"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="mail"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M885.9 127.9H132.8c-39.8 0-72 32.2-72 72v625.9c0 39.8 32.2 72 72 72h753.1c39.8 0 72-32.2 72-72V199.9c0-39.7-32.3-72-72-72zm-77.2 72L540.6 424l-1.6 1.3-1.4 1.5c-6.8 7.2-16 11.1-25.9 11.2h-.2c-9.8 0-19-3.9-25.8-10.9l-1.4-1.4-273.8-225.8h598.2zm77.2 625.9H132.8V229.2l302.8 249.5c20.4 20.2 47.2 31.3 76 31.3h.5c28.9-.1 55.9-11.4 76.2-31.9L886 229.3v596.5h-.1z"
              />
            </svg>
          </i>
          <span>
            Navigation One
          </span>
        </span>
        <i
          class="ant-menu-submenu-arrow"
        />
      </div>
      <ul
        class="ant-menu  ant-menu-sub ant-menu-inline"
        id="sub1$Menu"
        role="menu"
      >
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 5
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 6
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 7
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 8
        </li>
      </ul>
    </li>
    <li
      class="ant-menu-submenu ant-menu-submenu-inline"
      role="menuitem"
    >
      <div
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-menu-submenu-title"
        style="padding-left:24px"
      >
        <span>
          <i
            class="anticon anticon-appstore"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="appstore"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M398 64H136c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V136c0-39.8-32.2-72-72-72zm490 0H626c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V136c0-39.8-32.2-72-72-72zM398 554H136c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V626c0-39.8-32.2-72-72-72zm490 0H626c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V626c0-39.8-32.2-72-72-72z"
              />
            </svg>
          </i>
          <span>
            Navigation Two
          </span>
        </span>
        <i
          class="ant-menu-submenu-arrow"
        />
      </div>
      <div />
    </li>
  </ul>
</div>
`;

exports[`renders ./components/menu/demo/sider-current.md correctly 1`] = `
<ul
  class="ant-menu ant-menu-light ant-menu-root ant-menu-inline"
  role="menu"
  style="width:256px"
>
  <li
    class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open"
    role="menuitem"
  >
    <div
      aria-expanded="true"
      aria-haspopup="true"
      aria-owns="sub1$Menu"
      class="ant-menu-submenu-title"
      style="padding-left:24px"
    >
      <span>
        <i
          class="anticon anticon-mail"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="mail"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M885.9 127.9H132.8c-39.8 0-72 32.2-72 72v625.9c0 39.8 32.2 72 72 72h753.1c39.8 0 72-32.2 72-72V199.9c0-39.7-32.3-72-72-72zm-77.2 72L540.6 424l-1.6 1.3-1.4 1.5c-6.8 7.2-16 11.1-25.9 11.2h-.2c-9.8 0-19-3.9-25.8-10.9l-1.4-1.4-273.8-225.8h598.2zm77.2 625.9H132.8V229.2l302.8 249.5c20.4 20.2 47.2 31.3 76 31.3h.5c28.9-.1 55.9-11.4 76.2-31.9L886 229.3v596.5h-.1z"
            />
          </svg>
        </i>
        <span>
          Navigation One
        </span>
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
    <ul
      class="ant-menu  ant-menu-sub ant-menu-inline"
      id="sub1$Menu"
      role="menu"
    >
      <li
        class="ant-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        Option 1
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        Option 2
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        Option 3
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        Option 4
      </li>
    </ul>
  </li>
  <li
    class="ant-menu-submenu ant-menu-submenu-inline"
    role="menuitem"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-menu-submenu-title"
      style="padding-left:24px"
    >
      <span>
        <i
          class="anticon anticon-appstore"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="appstore"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M398 64H136c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V136c0-39.8-32.2-72-72-72zm490 0H626c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V136c0-39.8-32.2-72-72-72zM398 554H136c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V626c0-39.8-32.2-72-72-72zm490 0H626c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V626c0-39.8-32.2-72-72-72z"
            />
          </svg>
        </i>
        <span>
          Navigation Two
        </span>
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
    <div />
  </li>
  <li
    class="ant-menu-submenu ant-menu-submenu-inline"
    role="menuitem"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-menu-submenu-title"
      style="padding-left:24px"
    >
      <span>
        <i
          class="anticon anticon-setting"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="setting"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M961.8 439.6l-3.8-24-73.3-24.5c-6.4-19.8-14.4-39.2-23.9-57.7l34.6-69.1-14.2-19.8c-28.8-39.3-63.2-73.7-102.3-102.1l-19.7-14.2-69.1 34.6c-18.6-9.5-37.9-17.5-57.7-23.9L608 65.8l-23.8-3.7c-26.5-4.2-49.4-6.2-72.2-6.2-22.2 0-45.2 2-72.3 6.3l-24 3.8-24.4 73.4c-20.2 6.6-39.6 14.6-57.7 23.8l-69-34.7-19.7 14.2c-39.2 28.4-73.6 62.7-102.2 102.1l-14.2 19.8 34.6 69.1c-9.4 18.5-17.4 37.8-23.8 57.6L66 415.6l-3.8 24C58 466.1 56 489.7 56 512c0 22.4 2 46 6.2 72.3l3.8 24 73.3 24.5c6.4 19.8 14.4 39.2 23.9 57.7l-34.4 68.9L143 779c14.8 20.6 30.1 38.7 46.7 55.4 15.5 15.6 33.6 30.9 55.3 46.8l19.7 14.2 69-34.6c18.6 9.5 37.9 17.6 57.7 23.9l24.4 73.4 24 3.8c26.3 4.2 49.9 6.2 72.2 6.2 22.3 0 45.9-2 72.3-6.2l24-3.8 24.4-73.4c19.6-6.4 38.9-14.4 57.6-23.8l69.1 34.6 19.7-14.2c21.5-15.5 39.6-30.8 55.3-46.8 16.3-16.3 31.5-34.5 46.7-55.4l14.2-19.8-34.6-69.1c9.5-18.5 17.5-37.8 23.9-57.7l73.3-24.5 3.8-24c4.2-26.3 6.2-49.9 6.2-72.2.3-22.1-1.7-45.8-6.1-72.2zm-65.5 71.6v.5c0 13.5-.9 27.2-2.6 41.9l-35.4 11.8L827 576l-9.7 31.5c-5.5 18.2-12.8 35.9-21.7 52.7l-15.4 29.1 31.4 62.7c-9.2 11.6-18.3 21.9-27.8 31.4l-.2.2c-9.3 9.4-19.6 18.5-31.2 27.6l-62.5-31.3-29 15.1c-17.1 8.9-35.1 16.3-53.4 22.1l-31.3 9.8-10.2 31-11.8 35.4c-14.6 1.8-28.4 2.6-41.9 2.6-13.4 0-27.2-.9-41.9-2.6l-11.8-35.4-10.3-31.3-31.5-9.7c-18.6-5.7-36.3-13-52.7-21.7L334.9 780l-29.5 14.7-33.3 16.6c-11.6-9.2-21.9-18.3-31.4-27.8-9.7-9.7-18.8-20-27.8-31.4l31.2-62.5-15.2-29c-9.1-17.4-16.5-35.2-21.9-53l-9.7-31.5-66.6-22.1c-1.8-14.6-2.6-28.4-2.6-41.9s.9-27.2 2.6-41.9l66.4-22.1 9.7-31.4c5.6-18.1 13-36 21.9-53.2l15.2-29-14.6-29.3-16.6-33.3c17.5-21.8 37.4-41.7 59.2-59.2l62.6 31.3 29.1-15.3c16.8-8.8 34.7-16.2 53.2-22l31.3-9.8 10.4-31.1 11.8-35.4c15.1-1.7 28.8-2.6 41.8-2.6 13.4 0 27.2.9 41.8 2.6l22.2 66.3 31.3 9.7c18.2 5.7 36.1 13.1 53.2 21.9l29 15.2 62.5-31.3c21.8 17.5 41.8 37.4 59.5 59.3L780.4 334l15 28.9c8.9 17.2 16.4 35.2 22.1 53.5l9.8 31.3 31.1 10.4 35.4 11.8c1.9 15 2.7 28.5 2.5 41.3z"
            />
            <path
              d="M512.2 337.7c-96.1 0-174.3 78.2-174.3 174.3 0 96.1 78.2 174.3 174.3 174.3 96.1 0 174.3-78.2 174.3-174.3 0-96.1-78.2-174.3-174.3-174.3zm72.3 246.6c-19.3 19.3-45 30-72.3 30-27.3 0-53-10.6-72.3-30-19.3-19.3-30-45-30-72.3 0-27.3 10.6-53 30-72.3 19.3-19.3 45-30 72.3-30s53 10.6 72.3 30 30 45 30 72.3-10.7 53-30 72.3z"
            />
          </svg>
        </i>
        <span>
          Navigation Three
        </span>
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
    <div />
  </li>
</ul>
`;

exports[`renders ./components/menu/demo/switch-mode.md correctly 1`] = `
<div>
  <span
    class="ant-switch"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    />
  </span>
   Change Mode
  <span
    class="ant-divider"
    style="margin:0 1em"
  />
  <span
    class="ant-switch"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    />
  </span>
   Change Theme
  <br />
  <br />
  <ul
    class="ant-menu ant-menu-light ant-menu-root ant-menu-inline"
    role="menu"
    style="width:256px"
  >
    <li
      class="ant-menu-item ant-menu-item-selected"
      role="menuitem"
      style="padding-left:24px"
    >
      <i
        class="anticon anticon-mail"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="mail"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M885.9 127.9H132.8c-39.8 0-72 32.2-72 72v625.9c0 39.8 32.2 72 72 72h753.1c39.8 0 72-32.2 72-72V199.9c0-39.7-32.3-72-72-72zm-77.2 72L540.6 424l-1.6 1.3-1.4 1.5c-6.8 7.2-16 11.1-25.9 11.2h-.2c-9.8 0-19-3.9-25.8-10.9l-1.4-1.4-273.8-225.8h598.2zm77.2 625.9H132.8V229.2l302.8 249.5c20.4 20.2 47.2 31.3 76 31.3h.5c28.9-.1 55.9-11.4 76.2-31.9L886 229.3v596.5h-.1z"
          />
        </svg>
      </i>
      Navigation One
    </li>
    <li
      class="ant-menu-item"
      role="menuitem"
      style="padding-left:24px"
    >
      <i
        class="anticon anticon-calendar"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="calendar"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M888 128H768v-28c0-19.9-16.1-36-36-36s-36 16.1-36 36v28H328v-28c0-19.9-16.1-36-36-36s-36 16.1-36 36v28H136c-39.8 0-72 32.2-72 72v688c0 39.8 32.2 72 72 72h752c39.8 0 72-32.3 72-72V200c0-39.8-32.2-72-72-72zm-752 72h120v20c0 19.9 16.1 36 36 36s36-16.1 36-36v-20h368v20c0 19.9 16.1 36 36 36s36-16.1 36-36v-20h120v112H136V200zm752 688H136V384h752v504zM288 512h64c17.7 0 32 14.3 32 32s-14.3 32-32 32h-64c-17.7 0-32-14.3-32-32s14.3-32 32-32zm192 0h64c17.7 0 32 14.3 32 32s-14.3 32-32 32h-64c-17.7 0-32-14.3-32-32s14.3-32 32-32zm192 0h64c17.7 0 32 14.3 32 32s-14.3 32-32 32h-64c-17.7 0-32-14.3-32-32s14.3-32 32-32zM288 706h64c17.7 0 32 14.3 32 32s-14.3 32-32 32h-64c-17.7 0-32-14.3-32-32s14.3-32 32-32zm192 0h64c17.7 0 32 14.3 32 32s-14.3 32-32 32h-64c-17.7 0-32-14.3-32-32s14.3-32 32-32z"
          />
        </svg>
      </i>
      Navigation Two
    </li>
    <li
      class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open"
      role="menuitem"
    >
      <div
        aria-expanded="true"
        aria-haspopup="true"
        aria-owns="sub1$Menu"
        class="ant-menu-submenu-title"
        style="padding-left:24px"
      >
        <span>
          <i
            class="anticon anticon-appstore"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="appstore"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M398 64H136c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V136c0-39.8-32.2-72-72-72zm490 0H626c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V136c0-39.8-32.2-72-72-72zM398 554H136c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V626c0-39.8-32.2-72-72-72zm490 0H626c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V626c0-39.8-32.2-72-72-72z"
              />
            </svg>
          </i>
          <span>
            Navigation Three
          </span>
        </span>
        <i
          class="ant-menu-submenu-arrow"
        />
      </div>
      <ul
        class="ant-menu  ant-menu-sub ant-menu-inline"
        id="sub1$Menu"
        role="menu"
      >
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 3
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 4
        </li>
        <li
          class="ant-menu-submenu ant-menu-submenu-inline"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-menu-submenu-title"
            style="padding-left:48px"
            title="Submenu"
          >
            Submenu
            <i
              class="ant-menu-submenu-arrow"
            />
          </div>
          <div />
        </li>
      </ul>
    </li>
    <li
      class="ant-menu-submenu ant-menu-submenu-inline"
      role="menuitem"
    >
      <div
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-menu-submenu-title"
        style="padding-left:24px"
      >
        <span>
          <i
            class="anticon anticon-setting"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="setting"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M961.8 439.6l-3.8-24-73.3-24.5c-6.4-19.8-14.4-39.2-23.9-57.7l34.6-69.1-14.2-19.8c-28.8-39.3-63.2-73.7-102.3-102.1l-19.7-14.2-69.1 34.6c-18.6-9.5-37.9-17.5-57.7-23.9L608 65.8l-23.8-3.7c-26.5-4.2-49.4-6.2-72.2-6.2-22.2 0-45.2 2-72.3 6.3l-24 3.8-24.4 73.4c-20.2 6.6-39.6 14.6-57.7 23.8l-69-34.7-19.7 14.2c-39.2 28.4-73.6 62.7-102.2 102.1l-14.2 19.8 34.6 69.1c-9.4 18.5-17.4 37.8-23.8 57.6L66 415.6l-3.8 24C58 466.1 56 489.7 56 512c0 22.4 2 46 6.2 72.3l3.8 24 73.3 24.5c6.4 19.8 14.4 39.2 23.9 57.7l-34.4 68.9L143 779c14.8 20.6 30.1 38.7 46.7 55.4 15.5 15.6 33.6 30.9 55.3 46.8l19.7 14.2 69-34.6c18.6 9.5 37.9 17.6 57.7 23.9l24.4 73.4 24 3.8c26.3 4.2 49.9 6.2 72.2 6.2 22.3 0 45.9-2 72.3-6.2l24-3.8 24.4-73.4c19.6-6.4 38.9-14.4 57.6-23.8l69.1 34.6 19.7-14.2c21.5-15.5 39.6-30.8 55.3-46.8 16.3-16.3 31.5-34.5 46.7-55.4l14.2-19.8-34.6-69.1c9.5-18.5 17.5-37.8 23.9-57.7l73.3-24.5 3.8-24c4.2-26.3 6.2-49.9 6.2-72.2.3-22.1-1.7-45.8-6.1-72.2zm-65.5 71.6v.5c0 13.5-.9 27.2-2.6 41.9l-35.4 11.8L827 576l-9.7 31.5c-5.5 18.2-12.8 35.9-21.7 52.7l-15.4 29.1 31.4 62.7c-9.2 11.6-18.3 21.9-27.8 31.4l-.2.2c-9.3 9.4-19.6 18.5-31.2 27.6l-62.5-31.3-29 15.1c-17.1 8.9-35.1 16.3-53.4 22.1l-31.3 9.8-10.2 31-11.8 35.4c-14.6 1.8-28.4 2.6-41.9 2.6-13.4 0-27.2-.9-41.9-2.6l-11.8-35.4-10.3-31.3-31.5-9.7c-18.6-5.7-36.3-13-52.7-21.7L334.9 780l-29.5 14.7-33.3 16.6c-11.6-9.2-21.9-18.3-31.4-27.8-9.7-9.7-18.8-20-27.8-31.4l31.2-62.5-15.2-29c-9.1-17.4-16.5-35.2-21.9-53l-9.7-31.5-66.6-22.1c-1.8-14.6-2.6-28.4-2.6-41.9s.9-27.2 2.6-41.9l66.4-22.1 9.7-31.4c5.6-18.1 13-36 21.9-53.2l15.2-29-14.6-29.3-16.6-33.3c17.5-21.8 37.4-41.7 59.2-59.2l62.6 31.3 29.1-15.3c16.8-8.8 34.7-16.2 53.2-22l31.3-9.8 10.4-31.1 11.8-35.4c15.1-1.7 28.8-2.6 41.8-2.6 13.4 0 27.2.9 41.8 2.6l22.2 66.3 31.3 9.7c18.2 5.7 36.1 13.1 53.2 21.9l29 15.2 62.5-31.3c21.8 17.5 41.8 37.4 59.5 59.3L780.4 334l15 28.9c8.9 17.2 16.4 35.2 22.1 53.5l9.8 31.3 31.1 10.4 35.4 11.8c1.9 15 2.7 28.5 2.5 41.3z"
              />
              <path
                d="M512.2 337.7c-96.1 0-174.3 78.2-174.3 174.3 0 96.1 78.2 174.3 174.3 174.3 96.1 0 174.3-78.2 174.3-174.3 0-96.1-78.2-174.3-174.3-174.3zm72.3 246.6c-19.3 19.3-45 30-72.3 30-27.3 0-53-10.6-72.3-30-19.3-19.3-30-45-30-72.3 0-27.3 10.6-53 30-72.3 19.3-19.3 45-30 72.3-30s53 10.6 72.3 30 30 45 30 72.3-10.7 53-30 72.3z"
              />
            </svg>
          </i>
          <span>
            Navigation Four
          </span>
        </span>
        <i
          class="ant-menu-submenu-arrow"
        />
      </div>
      <div />
    </li>
  </ul>
</div>
`;

exports[`renders ./components/menu/demo/theme.md correctly 1`] = `
<div>
  <span
    checked=""
    class="ant-switch ant-switch-checked"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    >
      Dark
    </span>
  </span>
  <br />
  <br />
  <ul
    class="ant-menu ant-menu-dark ant-menu-root ant-menu-inline"
    role="menu"
    style="width:256px"
  >
    <li
      class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open ant-menu-submenu-selected"
      role="menuitem"
    >
      <div
        aria-expanded="true"
        aria-haspopup="true"
        aria-owns="sub1$Menu"
        class="ant-menu-submenu-title"
        style="padding-left:24px"
      >
        <span>
          <i
            class="anticon anticon-mail"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="mail"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M885.9 127.9H132.8c-39.8 0-72 32.2-72 72v625.9c0 39.8 32.2 72 72 72h753.1c39.8 0 72-32.2 72-72V199.9c0-39.7-32.3-72-72-72zm-77.2 72L540.6 424l-1.6 1.3-1.4 1.5c-6.8 7.2-16 11.1-25.9 11.2h-.2c-9.8 0-19-3.9-25.8-10.9l-1.4-1.4-273.8-225.8h598.2zm77.2 625.9H132.8V229.2l302.8 249.5c20.4 20.2 47.2 31.3 76 31.3h.5c28.9-.1 55.9-11.4 76.2-31.9L886 229.3v596.5h-.1z"
              />
            </svg>
          </i>
          <span>
            Navigation One
          </span>
        </span>
        <i
          class="ant-menu-submenu-arrow"
        />
      </div>
      <ul
        class="ant-menu  ant-menu-sub ant-menu-inline"
        id="sub1$Menu"
        role="menu"
      >
        <li
          class="ant-menu-item ant-menu-item-selected"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 1
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 2
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 3
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 4
        </li>
      </ul>
    </li>
    <li
      class="ant-menu-submenu ant-menu-submenu-inline"
      role="menuitem"
    >
      <div
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-menu-submenu-title"
        style="padding-left:24px"
      >
        <span>
          <i
            class="anticon anticon-appstore"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="appstore"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M398 64H136c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V136c0-39.8-32.2-72-72-72zm490 0H626c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V136c0-39.8-32.2-72-72-72zM398 554H136c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V626c0-39.8-32.2-72-72-72zm490 0H626c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V626c0-39.8-32.2-72-72-72z"
              />
            </svg>
          </i>
          <span>
            Navigtion Two
          </span>
        </span>
        <i
          class="ant-menu-submenu-arrow"
        />
      </div>
      <div />
    </li>
    <li
      class="ant-menu-submenu ant-menu-submenu-inline"
      role="menuitem"
    >
      <div
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-menu-submenu-title"
        style="padding-left:24px"
      >
        <span>
          <i
            class="anticon anticon-setting"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="setting"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M961.8 439.6l-3.8-24-73.3-24.5c-6.4-19.8-14.4-39.2-23.9-57.7l34.6-69.1-14.2-19.8c-28.8-39.3-63.2-73.7-102.3-102.1l-19.7-14.2-69.1 34.6c-18.6-9.5-37.9-17.5-57.7-23.9L608 65.8l-23.8-3.7c-26.5-4.2-49.4-6.2-72.2-6.2-22.2 0-45.2 2-72.3 6.3l-24 3.8-24.4 73.4c-20.2 6.6-39.6 14.6-57.7 23.8l-69-34.7-19.7 14.2c-39.2 28.4-73.6 62.7-102.2 102.1l-14.2 19.8 34.6 69.1c-9.4 18.5-17.4 37.8-23.8 57.6L66 415.6l-3.8 24C58 466.1 56 489.7 56 512c0 22.4 2 46 6.2 72.3l3.8 24 73.3 24.5c6.4 19.8 14.4 39.2 23.9 57.7l-34.4 68.9L143 779c14.8 20.6 30.1 38.7 46.7 55.4 15.5 15.6 33.6 30.9 55.3 46.8l19.7 14.2 69-34.6c18.6 9.5 37.9 17.6 57.7 23.9l24.4 73.4 24 3.8c26.3 4.2 49.9 6.2 72.2 6.2 22.3 0 45.9-2 72.3-6.2l24-3.8 24.4-73.4c19.6-6.4 38.9-14.4 57.6-23.8l69.1 34.6 19.7-14.2c21.5-15.5 39.6-30.8 55.3-46.8 16.3-16.3 31.5-34.5 46.7-55.4l14.2-19.8-34.6-69.1c9.5-18.5 17.5-37.8 23.9-57.7l73.3-24.5 3.8-24c4.2-26.3 6.2-49.9 6.2-72.2.3-22.1-1.7-45.8-6.1-72.2zm-65.5 71.6v.5c0 13.5-.9 27.2-2.6 41.9l-35.4 11.8L827 576l-9.7 31.5c-5.5 18.2-12.8 35.9-21.7 52.7l-15.4 29.1 31.4 62.7c-9.2 11.6-18.3 21.9-27.8 31.4l-.2.2c-9.3 9.4-19.6 18.5-31.2 27.6l-62.5-31.3-29 15.1c-17.1 8.9-35.1 16.3-53.4 22.1l-31.3 9.8-10.2 31-11.8 35.4c-14.6 1.8-28.4 2.6-41.9 2.6-13.4 0-27.2-.9-41.9-2.6l-11.8-35.4-10.3-31.3-31.5-9.7c-18.6-5.7-36.3-13-52.7-21.7L334.9 780l-29.5 14.7-33.3 16.6c-11.6-9.2-21.9-18.3-31.4-27.8-9.7-9.7-18.8-20-27.8-31.4l31.2-62.5-15.2-29c-9.1-17.4-16.5-35.2-21.9-53l-9.7-31.5-66.6-22.1c-1.8-14.6-2.6-28.4-2.6-41.9s.9-27.2 2.6-41.9l66.4-22.1 9.7-31.4c5.6-18.1 13-36 21.9-53.2l15.2-29-14.6-29.3-16.6-33.3c17.5-21.8 37.4-41.7 59.2-59.2l62.6 31.3 29.1-15.3c16.8-8.8 34.7-16.2 53.2-22l31.3-9.8 10.4-31.1 11.8-35.4c15.1-1.7 28.8-2.6 41.8-2.6 13.4 0 27.2.9 41.8 2.6l22.2 66.3 31.3 9.7c18.2 5.7 36.1 13.1 53.2 21.9l29 15.2 62.5-31.3c21.8 17.5 41.8 37.4 59.5 59.3L780.4 334l15 28.9c8.9 17.2 16.4 35.2 22.1 53.5l9.8 31.3 31.1 10.4 35.4 11.8c1.9 15 2.7 28.5 2.5 41.3z"
              />
              <path
                d="M512.2 337.7c-96.1 0-174.3 78.2-174.3 174.3 0 96.1 78.2 174.3 174.3 174.3 96.1 0 174.3-78.2 174.3-174.3 0-96.1-78.2-174.3-174.3-174.3zm72.3 246.6c-19.3 19.3-45 30-72.3 30-27.3 0-53-10.6-72.3-30-19.3-19.3-30-45-30-72.3 0-27.3 10.6-53 30-72.3 19.3-19.3 45-30 72.3-30s53 10.6 72.3 30 30 45 30 72.3-10.7 53-30 72.3z"
              />
            </svg>
          </i>
          <span>
            Navigation Three
          </span>
        </span>
        <i
          class="ant-menu-submenu-arrow"
        />
      </div>
      <div />
    </li>
  </ul>
</div>
`;

exports[`renders ./components/menu/demo/vertical.md correctly 1`] = `
<ul
  class="ant-menu ant-menu-light ant-menu-root ant-menu-vertical"
  role="menu"
  style="width:256px"
>
  <li
    class="ant-menu-submenu ant-menu-submenu-vertical"
    role="menuitem"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-menu-submenu-title"
    >
      <span>
        <i
          class="anticon anticon-mail"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="mail"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M885.9 127.9H132.8c-39.8 0-72 32.2-72 72v625.9c0 39.8 32.2 72 72 72h753.1c39.8 0 72-32.2 72-72V199.9c0-39.7-32.3-72-72-72zm-77.2 72L540.6 424l-1.6 1.3-1.4 1.5c-6.8 7.2-16 11.1-25.9 11.2h-.2c-9.8 0-19-3.9-25.8-10.9l-1.4-1.4-273.8-225.8h598.2zm77.2 625.9H132.8V229.2l302.8 249.5c20.4 20.2 47.2 31.3 76 31.3h.5c28.9-.1 55.9-11.4 76.2-31.9L886 229.3v596.5h-.1z"
            />
          </svg>
        </i>
        <span>
          Navigation One
        </span>
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
  </li>
  <li
    class="ant-menu-submenu ant-menu-submenu-vertical"
    role="menuitem"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-menu-submenu-title"
    >
      <span>
        <i
          class="anticon anticon-appstore"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="appstore"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M398 64H136c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V136c0-39.8-32.2-72-72-72zm490 0H626c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V136c0-39.8-32.2-72-72-72zM398 554H136c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V626c0-39.8-32.2-72-72-72zm490 0H626c-39.8 0-72 32.2-72 72v262c0 39.8 32.2 72 72 72h262c39.8 0 72-32.2 72-72V626c0-39.8-32.2-72-72-72z"
            />
          </svg>
        </i>
        <span>
          Navigation Two
        </span>
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
  </li>
  <li
    class="ant-menu-submenu ant-menu-submenu-vertical"
    role="menuitem"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-menu-submenu-title"
    >
      <span>
        <i
          class="anticon anticon-setting"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="setting"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M961.8 439.6l-3.8-24-73.3-24.5c-6.4-19.8-14.4-39.2-23.9-57.7l34.6-69.1-14.2-19.8c-28.8-39.3-63.2-73.7-102.3-102.1l-19.7-14.2-69.1 34.6c-18.6-9.5-37.9-17.5-57.7-23.9L608 65.8l-23.8-3.7c-26.5-4.2-49.4-6.2-72.2-6.2-22.2 0-45.2 2-72.3 6.3l-24 3.8-24.4 73.4c-20.2 6.6-39.6 14.6-57.7 23.8l-69-34.7-19.7 14.2c-39.2 28.4-73.6 62.7-102.2 102.1l-14.2 19.8 34.6 69.1c-9.4 18.5-17.4 37.8-23.8 57.6L66 415.6l-3.8 24C58 466.1 56 489.7 56 512c0 22.4 2 46 6.2 72.3l3.8 24 73.3 24.5c6.4 19.8 14.4 39.2 23.9 57.7l-34.4 68.9L143 779c14.8 20.6 30.1 38.7 46.7 55.4 15.5 15.6 33.6 30.9 55.3 46.8l19.7 14.2 69-34.6c18.6 9.5 37.9 17.6 57.7 23.9l24.4 73.4 24 3.8c26.3 4.2 49.9 6.2 72.2 6.2 22.3 0 45.9-2 72.3-6.2l24-3.8 24.4-73.4c19.6-6.4 38.9-14.4 57.6-23.8l69.1 34.6 19.7-14.2c21.5-15.5 39.6-30.8 55.3-46.8 16.3-16.3 31.5-34.5 46.7-55.4l14.2-19.8-34.6-69.1c9.5-18.5 17.5-37.8 23.9-57.7l73.3-24.5 3.8-24c4.2-26.3 6.2-49.9 6.2-72.2.3-22.1-1.7-45.8-6.1-72.2zm-65.5 71.6v.5c0 13.5-.9 27.2-2.6 41.9l-35.4 11.8L827 576l-9.7 31.5c-5.5 18.2-12.8 35.9-21.7 52.7l-15.4 29.1 31.4 62.7c-9.2 11.6-18.3 21.9-27.8 31.4l-.2.2c-9.3 9.4-19.6 18.5-31.2 27.6l-62.5-31.3-29 15.1c-17.1 8.9-35.1 16.3-53.4 22.1l-31.3 9.8-10.2 31-11.8 35.4c-14.6 1.8-28.4 2.6-41.9 2.6-13.4 0-27.2-.9-41.9-2.6l-11.8-35.4-10.3-31.3-31.5-9.7c-18.6-5.7-36.3-13-52.7-21.7L334.9 780l-29.5 14.7-33.3 16.6c-11.6-9.2-21.9-18.3-31.4-27.8-9.7-9.7-18.8-20-27.8-31.4l31.2-62.5-15.2-29c-9.1-17.4-16.5-35.2-21.9-53l-9.7-31.5-66.6-22.1c-1.8-14.6-2.6-28.4-2.6-41.9s.9-27.2 2.6-41.9l66.4-22.1 9.7-31.4c5.6-18.1 13-36 21.9-53.2l15.2-29-14.6-29.3-16.6-33.3c17.5-21.8 37.4-41.7 59.2-59.2l62.6 31.3 29.1-15.3c16.8-8.8 34.7-16.2 53.2-22l31.3-9.8 10.4-31.1 11.8-35.4c15.1-1.7 28.8-2.6 41.8-2.6 13.4 0 27.2.9 41.8 2.6l22.2 66.3 31.3 9.7c18.2 5.7 36.1 13.1 53.2 21.9l29 15.2 62.5-31.3c21.8 17.5 41.8 37.4 59.5 59.3L780.4 334l15 28.9c8.9 17.2 16.4 35.2 22.1 53.5l9.8 31.3 31.1 10.4 35.4 11.8c1.9 15 2.7 28.5 2.5 41.3z"
            />
            <path
              d="M512.2 337.7c-96.1 0-174.3 78.2-174.3 174.3 0 96.1 78.2 174.3 174.3 174.3 96.1 0 174.3-78.2 174.3-174.3 0-96.1-78.2-174.3-174.3-174.3zm72.3 246.6c-19.3 19.3-45 30-72.3 30-27.3 0-53-10.6-72.3-30-19.3-19.3-30-45-30-72.3 0-27.3 10.6-53 30-72.3 19.3-19.3 45-30 72.3-30s53 10.6 72.3 30 30 45 30 72.3-10.7 53-30 72.3z"
            />
          </svg>
        </i>
        <span>
          Navigation Three
        </span>
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
  </li>
</ul>
`;
